# alhaq-backend

./: .dockerignore  .gitignore  ADMIN_CREATION_GUIDE.md  Dockerfile  STARTUP_COMMANDS.md  add_item_status.sql  alembic.ini  celery_worker.py  create_admin.py  create_admin_direct.py  fly.toml  increase_precision.sql  main.py  manual_db_update.py  migrate_payout_config.py  pyproject.toml  railway.json  requirements.txt  start.sh  start_app.py  start_celery.py  start_celery.sh  start_celery_only.py  start_render_simple.py  test_emails.py  update_database_precision.py
alembic/: env.py
core/: admin_service.py  asset_service.py  auth.py  auth_service.py  automotive_service.py  bank_service.py  categories.py  celery_app.py  config.py  dispute_service.py  email_service.py  handlers.py  inventory.py  legal_document_html.py  logging_config.py  middleware.py  model.py  notification_utils.py  notifications_service.py  order.py  password_policy.py  payment_service.py  paystack_service.py  phone_service.py  products.py  property_service.py  redis_cache.py  redis_client.py  redis_middleware.py  seller_payout_service.py  status_constants.py  system_settings_service.py  tasks.py
db/: session.py
routers/: addresses.py  admin.py  assets.py  auth.py  automotive.py  banks.py  categories.py  checkout.py  dashboard.py  disputes.py  legal_documents.py  notifications.py  order.py  payments.py  phones.py  products.py  profile.py  properties.py  public.py  reviews.py  seller.py  system_settings.py  wishlist.py
schemas/: address.py  admin.py  assets.py  auth.py  automotive.py  bank.py  (+17 more)
(+46 files in other folders)
